css/styles.css
/* ... */
/* --------- TESTIMONIALS --------- */

.testimonials {
  position: relative;
}

.testimonials::before {
  content: "";
  position: absolute;
  top: -142px;
  left: 0;
  z-index: 10;

  width: 286px;
  height: 545px;

  background-image: url(../assets/img/architecture-2.webp);
  background-repeat: no-repeat;
  background-size: contain;
}

.testimonials-container {
  position: relative;

  border-bottom: 1px solid var(--contacts-color);
}

.testimonials-text {
  position: relative;
  z-index: 10;

  width: 666px;

  background-color: var(--bg-color);
}

.section-name.testimonials-section-name {
  margin-bottom: 15px;
}

.section-title.testimonials-title {
  margin-bottom: 7px;
}

.testimonials-main {
  display: flex;
  flex-direction: row;

  margin-bottom: 43px;
}

.testimonials-main-left {
  flex-grow: 1;
}

.testimonials-reviews {
  width: 950px;
  margin-bottom: 33px;
}

.testimonials-review {
  display: none;

  width: 950px;
  padding-top: 53px;
  
  color: var(--dark-text);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  line-height: 1.313;
}

.testimonials-review.active {
  display: block;
}

.testimonials-persons-block {
  display: flex;
  flex-direction: row;
  gap: 37px;
}

.testimonials-quote {
  fill: var(--dark);
  stroke: var(--dark);
}

.testimonials-quote-line {
  width: 41px;
  height: 281px;
}

.testimonials-name {
  display: none;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.15;
}

.testimonials-name.active {
  display: block;
}

.testimonials-role {
  display: none;

  color: var(--dark-text);
  font-size: 24px;
  line-height: 1.3;
}

.testimonials-role.active {
  display: block;
}

.testimonials-photos {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;

  margin-left: 69px;
}

.testimonials-photo {
  width: 70px;
  height: 70px;

  border-radius: 50%;

  background-color: var(--light);

  cursor: pointer;
}

.testimonials-photo.active {
  width: 110px;
  height: 110px;

  border: 2px solid var(--accent);
}

.testimonials-hr {
  position: absolute;
  bottom: -2px;

  width: 526px;
  height: 3px;

  background-color: var(--dark);
}

/* --------- TEAM --------- */

.team {
  position: relative;
}

.team::before {
  content: "";
  position: absolute;
  top: -142px;
  right: 0;
  z-index: 10;

  width: 286px;
  height: 545px;

  background-image: url(../assets/img/architecture.webp);
  background-repeat: no-repeat;
  background-size: contain;
}

.team-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;

  margin-bottom: 150px;
}

.section-name.team-section-name {
  margin-bottom: 14px;
}

.section-title.team-title {
  margin-bottom: 9px;
}

.team-descr {
  width: 439px;
  margin-bottom: 43px;
}

.team-text {
  width: 483px;
}

.team-image {
  display: none;

  width: 416px;
  height: 479px;

  background-color: var(--light);
}

.team-image.active {
  display: block;
}

.team-members {
  display: flex;
  flex-direction: column;
  gap: 35px;

  width: 269px;
}

.team-members > li {
  position: relative;
  z-index: 10;

  background-color: var(--bg-color);
}

.team-member-name {
  margin-bottom: 3px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;
  text-align: end;

  cursor: pointer;
}

.team-member-name.active {
  margin-bottom: 0;

  color: #ff6600;
  font-size: 32px;
  line-height: 1.313;
  text-decoration: underline;
}

.team-member-position {
  font-size: 24px;
  text-align: end;
}

/* --------- PRICING --------- */

.pricing {
  scroll-margin-top: 145px;

  background-color: var(--status-items);
  background-image: url(../assets/img/map.webp);
  background-repeat: no-repeat;
  background-size: 997px 640px;
  background-position: 0 0;
}

.pricing-container {
  padding-top: 143px;
  padding-bottom: 236px;

  text-align: center;
}

.section-name.pricing-name {
  margin-bottom: 14px;
}

.section-title.pricing-title {
  margin-bottom: 67px;
}

.pricing-list {
  display: flex;
  flex-direction: row;
  gap: 24px;
}

.pricing-item {
  position: relative;

  width: calc((100% - 48px) / 3);
  height: 536px;
  padding: 44px 39px 50px;

  border: 1px solid var(--contacts-color);

  background-color: var(--bg-color);

  text-align: start;
}

.price-line {
  margin-bottom: 13px;
}

.price {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
}

.price-span {
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
}

.price-tariff {
  display: flex;
  flex-direction: row;
  gap: 16px;
  align-items: center;

  margin-bottom: 27px;
}

.price-icon-star {
  stroke: var(--accent);
  fill: transparent;
}

.pricing-hr {
  width: 316px;
  height: 2px;

  background-color: var(--contacts-color);
}

.pricing-features {
  margin-bottom: 38px;
}

.pricing-feature {
  position: relative;

  padding-left: 16px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 16px;
  line-height: 2.25;
}

.pricing-feature::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0.8em;

  width: 2px;
  height: 2px;
  
  border-radius: 50%;

  background-color: var(--dark);
}

.pricing-feature.closed {
  color: var(--dark-text);
}

.pricing-feature.closed::before {
  background-color: var(--dark-text);
}

.pricing-rectangle {
  position: absolute;
  top: 0;
  left: 0;

  fill: var(--dark);
}

.pricing-special {
  position: absolute;
  top: 10px;
  right: 10px;
  display: block;

  width: 100px;
  height: 30px;

  background-color: #39ca6e;
  border-radius: 20px;

  color: var(--bg-color);
  text-align: center;
}

/* --------- BLOG --------- */

.blog {
  position: relative;
}
/* ... */

